ID-3522 [FIX] Remove important from time picker selectors (#568)
* ID-3522 [FIX] Fixes date/time range overlapping in case of flexible width

* Recovered focuse-outline class for date and time pickers

* ID-3522 [FIX] Fixed responsiveness

* Moved date/time range styles from api to widget

* ID-3522 [FIX] Remove important from time picker selectors

* Removed important

--- a/css/builder.css
+++ b/css/builder.css
@@ -1301,7 +1301,7 @@ form hr {
 
 @media screen and (min-width: 640px) {
   .geolocation.btn-primary {
-    display: flex !important;
+    display: flex;
   }
 }
 
@@ -1311,7 +1311,7 @@ form hr {
 [data-widget-package="com.fliplet.form-builder"]
   .form-group.fl-time-picker.time-picker-end
   > .form-control {
-  padding-right: 0 !important;
+  padding-right: 0;
 }
 
 @media only screen and (max-width: 340px) {
